tests/ui/modules/path-macro.stderr
error: malformed `path` attribute input
  --> $DIR/path-macro.rs:5:1
   |
LL | #[path = foo!()]
   | ^^^^^^^^^^^^^^^^
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/items/modules.html#the-path-attribute>
help: must be of the form
   |
LL - #[path = foo!()]
LL + #[path = "file"]
   |

error: aborting due to 1 previous error

